# Econ-Gym

econgym/: JAX_OPTIMIZATION_README.md  README.md  __init__.py  domeij_heathcote_experiment.py  mkdocs.yml  plot_zurcher.py  pyproject.toml  quick_test.py  requirements.txt  run_aiyagari_transition.py  run_demos.py  run_hank.py  run_jax_demo_simple.py  run_tank.py  run_transition.py  setup.py  test_imports.py  test_jax_setup.py  test_ryan.py  test_tank.py
econgym/.github/workflows/: ci.yml
econgym/Tests/: test_env_check.py  test_env_smoke.py
econgym/core/: BBL.py  GMMestimation.py  MLestimation.py  base_env.py  calibration.py  estimation.py  mbrl_wrapper.py  pseudoMaximumLikelihood.py  solver.py  transition_wrapper.py  value_function_wrapper.py
econgym/demos/: aiyagari_demo.py  bbl_demo.py  jax_optimization_demo.py  ryan_demo.py  transfer_learning_demo.py  zurcher_demo.py
econgym/docs/: index.md
econgym/econgym/: __init__.py  cli.py  registry.py  test_aiyagari.py
econgym/econgym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
econgym/econgym/core/: MLestimation.py  __init__.py  base_env.py  base_solver.py  transition_wrapper.py  utils.py
econgym/econgym/envs/: BBL_env.py  BlanchardKremer.py  HANK_env.py  (+12 more)
econgym/envs/: BBL_env.py  BBL_env_jax.py  RepeatedPrisoners_Env.py  __init__.py  aiyagari_env.py  zurcher_env.py  zurcher_env_jax.py
econgym/examples/: Harold_Zurcher_demo.py  aiyagari_demo.py  ml_estimation_example.py  prisoners_dqn_example.py  prisoners_to_zurcher_transfer.py
econgym/wrappers/: __init__.py  mbrl.py  value_function.py
(+9 files in other folders)
